--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/TransportUnitDetailsDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/TransportUnitDetailsDialog.mxml
@@ -13,9 +13,9 @@
     		[Bindable]
     		public var transportUnits:ArrayCollection;
     		[Bindable]
-    		private var modelLocator:CommonModelLocator = CommonModelLocator.getInstance();
+    		private var modelLocator:ModelLocator = ModelLocator.getInstance();
             [Bindable]
-            private var modelLocator2:ModelLocator = ModelLocator.getInstance();
+            private var commonModelLocator:CommonModelLocator = CommonModelLocator.getInstance();
     		
     		private function init():void
     		{
@@ -47,6 +47,15 @@
     			return null;
     		}
 
+            private function getID():String
+            {
+                if(isNaN(transportUnit.id))
+                {
+                    return "(No ID)";
+                }
+                return "(ID "+transportUnit.id+")";
+            }
+
             private function keyEventHandler(event:KeyboardEvent):void
             {
                 // ESC
@@ -59,7 +68,7 @@
     	]]>
     </mx:Script>
 	<mx:Canvas height="100%" width="100%">
-		<mx:Label x="367" y="10" text="(ID)" id="idLbl"/>
+		<mx:Label x="367" y="10" text="{getID()}" id="idLbl"/>
 		<mx:Label x="10" y="10" text="Barcode"/>
 		<mx:Label x="382" y="64" text="by"/>
 		<mx:Label x="10" y="38" text="Actual Location"/>
@@ -67,7 +76,7 @@
 		<mx:Label x="10" y="64" text="Last inventory check on"/>
 		<mx:Label x="10" y="90" text="Created on"/>
 		<mx:Label x="10" y="116" text="Weight"/>
-		<mx:Label x="10" y="142" text="Stands On (Parent)"/>
+		<mx:Label x="10" y="142" text="Placed On (Parent)"/>
 		<mx:Label x="10" y="168" text="State"/>
 		<mx:Label x="10" y="194" text="Target Location"/>
 		<mx:Canvas x="10" y="220" width="560" height="213" backgroundColor="#E1D0D0">
@@ -79,7 +88,7 @@
 			<mx:Label x="10" y="64" text="Weight Tare"/>
 			<mx:Label x="285" y="64" text="Weight max"/>
 			<mx:Label x="285" y="90" text="Compatibility"/>
-			<mx:ComboBox x="159" y="8" id="transportUnitTypeCmb" dataProvider="{modelLocator.allTransportUnitTypes}" />
+			<mx:ComboBox x="159" y="8" id="transportUnitTypeCmb" dataProvider="{commonModelLocator.allTransportUnitTypes}" />
 			<mx:TextInput x="85" y="34" width="64" id="transportUnitTypeHeightTxt"/>
 			<mx:TextInput x="85" y="62" width="64" id="transportUnitTypeWeightTareTxt"/>
 			<mx:TextInput x="377" y="62" width="64" id="transportUnitTypeWeightMaxTxt"/>
@@ -90,15 +99,15 @@
 		</mx:Canvas>
 		<mx:TextInput x="170" y="8" id="barcodeTxt" text="{transportUnit.barcode}"/>
 		<mx:TextInput x="170" y="140" id="parentTxt" text="{getParent()}"/>
-		<mx:ComboBox x="170" y="36" id="actualLocationCmb" dataProvider="{modelLocator2.allLocations}"/>
+		<mx:ComboBox x="170" y="36" id="actualLocationCmb" dataProvider="{modelLocator.allLocations}" width="160"/>
 		<mx:ComboBox x="170" y="166" id="stateCmb" />
-		<mx:ComboBox x="170" y="192" id="targetLocationCmb" dataProvider="{modelLocator2.allLocations}"/>
-		<mx:DateField x="420" y="36" id="sinceDt" text="{transportUnit.actualLocationDate}" width="150"/>
-		<mx:DateField x="170" y="62" id="invDt" text="{transportUnit.inventoryDate}" width="100"/>
-		<mx:DateField x="170" y="88" id="createdDt" text="{transportUnit.creationDate}" width="100"/>
+		<mx:ComboBox x="170" y="192" id="targetLocationCmb" dataProvider="{modelLocator.allLocations}"/>
+		<mx:DateField x="420" y="36" id="sinceDt" formatString="DD.MM.YYYY" text="{transportUnit.actualLocationDate}" width="150"/>
+		<mx:DateField x="170" y="62" id="invDt" formatString="{modelLocator.DT_FORMAT}" text="{transportUnit.inventoryDate}" width="160"/>
+		<mx:DateField x="170" y="88" id="createdDt" formatString="{modelLocator.DT_FORMAT}" text="{transportUnit.creationDate}" width="160" enabled="false"/>
 		<mx:Label x="420" y="64" id="invLbl" text="{transportUnit.inventoryUser}"/>
-		<mx:Label x="170" y="116" id="weightLbl" width="100"/>
-		<mx:CheckBox x="289" y="114" label="is empty" id="emptyChk"/>
+		<mx:Label x="170" y="116" id="weightLbl" width="160" text="{transportUnit.weight}"/>
+		<mx:CheckBox x="367" y="114" label="is empty" id="emptyChk"/>
 		<mx:HBox x="10" y="441" width="100%" verticalAlign="middle" horizontalAlign="center">
 			<mx:Button label="Save" id="saveBtn"/>
 			<mx:Button label="Cancel" id="cancelBtn"/>
